- set z-index on card count appropriately - update scripts to locate json files correctly

--- a/caesars-palace/blocks/card-list/card-list.css
+++ b/caesars-palace/blocks/card-list/card-list.css
@@ -293,7 +293,6 @@
     font-weight: 600;
     text-transform: uppercase;
     margin-bottom: 32px;
-    z-index: -1;
     min-width: 140px;
     padding-left: 16px;
     padding-right: 16px;
